Feat: js 기능 모두 추가
v2
1. sec1: 데이터 fetch 및 display, pagination (입양 급구 쿼리 미구현)
2. sec2: 데이터 fetch 및 display, 무한 스크롤
3. modal: 카드 클릭 시 modal display, 카카오맵 API

--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./index.css" />
-    <script src="common.js" defer></script>
+    <script src="common.js" type="module" defer></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey={API키}&autoload=false&libraries=services"
+      defer
+    ></script>
   </head>
   <body>
-    <section id="sec1">
+    <section id="banner">
       <header>
         <h1 class="dongle-bold"><a href="/">데려가냥?</a></h1>
         <nav id="gnb" class="dongle-regular">
@@ -47,11 +52,10 @@
       </div>
     </section>
 
-    <section id="sec2" class="mw">
+    <section id="sec1" class="mw">
       <h2 class="dongle-bold">빨리 찾아가세요!</h2>
-
-      <div class="list-con noto-sans-kr">
-        <li class="card">
+      <div id="list-con1" class="list-con noto-sans-kr">
+        <!-- <li class="card">
           <div class="card-img">
             <img
               src="https://www.animal.go.kr/files/shelter/2024/08/202408120208454.jpg"
@@ -75,13 +79,131 @@
             </p>
           </div>
           <a href="#">자세히보기</a>
-        </li>
+        </li> -->
+      </div>
+      <div id="pagenation">
+        <!-- <button class="prev">이전</button>
+        <button class="on">1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button class="next">다음</button> -->
       </div>
     </section>
 
-    <section id="modal"></section>
-    <section id="sec3"></section>
+    <section id="sec2" class="mw">
+      <h2 class="dongle-bold">많은 친구들이 엄마 아빠를 구해요!</h2>
+      <div class="search-bar">
+        <select id="sido" name="sido">
+          <option value="none">시/도 선택</option>
+        </select>
+        <select id="sigungu" name="sigungu">
+          <option value="none">시/군/구 선택</option>
+        </select>
+        <select id="up-kind" name="up-kind">
+          <option value="none">축종 선택</option>
+        </select>
+        <select id="kind" name="kind">
+          <option value="none">품종 선택</option>
+        </select>
+        <button id="search-btn">검색</button>
+      </div>
+      <div id="list-con2" class="list-con noto-sans-kr"></div>
+    </section>
+
+    <section id="modal">
+      <h2 hidden>자세히보기 모달창</h2>
+      <div id="modal-content">
+        <button id="close-btn" class="btn">닫기</button>
+
+        <div class="modal-layout">
+          <div id="modal-img">
+            모달 이미지
+            <!-- <img
+              src="https://www.animal.go.kr/files/shelter/2024/08/202408120208454.jpg"
+              alt="프로필 이미지"
+            /> -->
+          </div>
+          <div>
+            <div id="modal-text">
+              모달 텍스트
+              <!-- <p id="modal-noticeNo">전남-나주-2024-01003</p>
+              <p id="modal-kindCd">
+                시고르자브종<i class="fa-solid fa-venus sexCd"></i>
+              </p>
+              <p id="modal-noticeDt">
+                <i class="fa-regular fa-calendar"></i>2024.08.08~2024.08.08
+              </p> -->
+            </div>
+            <table id="modal-table">
+              <tbody>
+                <tr>
+                  <td>발견날짜</td>
+                  <td id="modal-happenDt">Row 7, Column 2</td>
+                </tr>
+                <tr>
+                  <td>발견장소</td>
+                  <td id="modal-happenPlace">Row 7, Column 2</td>
+                </tr>
+                <!-- <tr >
+                    <td>품종</td>
+                    <td class="kindCd">Row 1, Column 2</td>
+                  </tr> -->
+                <tr>
+                  <td>색상</td>
+                  <td id="modal-colorCd">Row 4, Column 2</td>
+                </tr>
+                <tr>
+                  <td>나이</td>
+                  <td id="modal-age">Row 3, Column 2</td>
+                </tr>
+                <tr>
+                  <td>체중</td>
+                  <td id="modal-weight">Row 5, Column 2</td>
+                </tr>
+                <tr>
+                  <td>상태</td>
+                  <td id="modal-processState">Row 6, Column 2</td>
+                </tr>
+                <!-- <tr>
+                    <td>성별</td>
+                    <td class="sexCd">Row 2, Column 2</td>
+                  </tr> -->
+                <tr>
+                  <td>중성화 여부</td>
+                  <td id="modal-neuterYn">Row 12, Column 2</td>
+                </tr>
+                <tr>
+                  <td>특징</td>
+                  <td id="modal-specialMark">Row 12, Column 2</td>
+                </tr>
+                <tr>
+                  <td>보호소 이름</td>
+                  <td id="modal-careNm">Row 8, Column 2</td>
+                </tr>
+                <tr>
+                  <td>보호소 전화번호</td>
+                  <td id="modal-careTel">Row 10, Column 2</td>
+                </tr>
+                <tr>
+                  <td>보호장소</td>
+                  <td id="modal-careAddr">Row 9, Column 2</td>
+                </tr>
+                <tr>
+                  <td>담당자</td>
+                  <td id="modal-chargeNm">Row 11, Column 2</td>
+                </tr>
+                <tr>
+                  <td>담당자 전화번호</td>
+                  <td id="modal-officetel">Row 12, Column 2</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div id="modal-map">카카오 지도</div>
+      </div>
+    </section>
   </body>
 </html>
-
-<!-- <i class="fa-solid fa-mars"> </i>-->
